[tool.poetry]
name = "homes-service"
version = "0.1.0"
description = ""
authors = ["ivg97 <gavr97.97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
pydantic-settings = "^2.9.1"
pydantic = {extras = ["email"], version = "^2.11.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
orjson = "^3.10.16"
uvicorn = "^0.34.2"
redis = "^5.2.1"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
poetry-core = "^2.1.2"
jinja2 = "^3.1.6"
jmespath = "^1.0.1"
black = "^25.1.0"
pytest-asyncio = "^0.26.0"
scipy = "^1.15.3"
seaborn = "0.13.2"
pandas = "^2.2.3"
matplotlib = "<3.10"
requests = "^2.32.3"
loguru = "^0.7.3"
aiogram = "^3.20.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
